# Sbem_workspace

./: 0.2.27  README.md
src/apriltag_ros-master/: CMakeLists.txt  package.xml
src/apriltag_ros-master/cfg/: tags_36h11.yaml
src/apriltag_ros-master/src/: AprilTagNode.cpp
src/aruco_tracking/: arucoDetection.py  arucoPoseEstimation.py  aruco_generation.py  aruco_marker_ros.py  publish_webcam_viaros2.py
src/aruco_tracking/aruco_calib_realCamera/: calibration_script.py  getImagesCalibration.py  getImagesCalibration_ros2Camera.py
src/diffdrive_sbem/: CMakeLists.txt  README.md  diffdrive_sbem.xml  package.xml
src/diffdrive_sbem/bringup/config/: diffbot_controllers.yaml
src/diffdrive_sbem/bringup/launch/: diffbot.launch.py
src/diffdrive_sbem/description/launch/: view_robot.launch.py
src/diffdrive_sbem/description/ros2_control/: diffbot.ros2_control.xacro
src/diffdrive_sbem/description/urdf/: diffbot.urdf.xacro
src/diffdrive_sbem/doc/: userdoc.rst
src/diffdrive_sbem/hardware/: diffbot_system.cpp
src/diffdrive_sbem/hardware/include/diffdrive_sbem/: diffbot_system.hpp
src/diffdrive_sbem/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
src/laser_filters-ros2/examples/: footprint_filter_example.yaml
src/robot_sbem/: CMakeLists.txt  README.md  package.xml
src/robot_sbem/config/: config_rviz.rviz  dock_database.yaml  docking_params.yaml  ekf.yaml  gz_bridge.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
src/robot_sbem/description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  materials.xacro  robot_sbem.urdf.xacro  ros2_control.xacro
src/robot_sbem/launch/: footprint_filter_laser.launch.py  joystick.launch.py  launch_ros2_control.launch.py  (+14 more)
src/sbem_AI/: TFpublisher.py  agent_sbem.py  agent_sbem_v2.py  custom_agent.py  positionManager.py  userInput.py
src/sbem_docking/: CMakeLists.txt  map_gazebo_sim.pgm  map_gazebo_sim.yaml  package.xml  plugin.xml
src/sbem_speaking/: CMakeLists.txt  package.xml
src/sbem_tool_gui/: package.xml  setup.cfg  setup.py
src/sbem_vision/: package.xml  setup.cfg  setup.py
(+82 files in other folders)
